[tool.poetry]
name = 'evm_extras'
version = '0.1.1'
description = 'The package containing utilities to develop Web3-based projects'
authors = ['Alexey <abelenkov2006@gmail.com>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/blnkoff/evm-extras'
homepage = 'https://github.com/blnkoff/evm-extras'
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS'
]
packages = [{ include = 'evm_extras' }]

[tool.poetry.dependencies]
python = '^3.11'
web3 = "^6.12.0"
evm-wallet = "^1.1.1"
python-extras = "^0.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
build = "^1.0.3"
twine = "^4.0.2"
pytest-evm = {version = "^0.1.0", extras = ["dotenv"]}

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
